# Competity

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  scheduler.py  take_screenshots.py  test_tg.py  trigger_collect.py
app/api/: competitors.py  reports.py  webhooks.py
app/bot/: telegram.py
app/collectors/: __init__.py  base.py  github.py  hackernews.py  producthunt.py  reddit.py  website.py
app/models/: __init__.py  collected_data.py  competitor.py  report.py
app/schemas/: __init__.py  collected_data.py  competitor.py  report.py
app/services/: analyzer.py  collector_service.py  report_generator.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Competitors.tsx  Dashboard.tsx  Reports.tsx
tests/: conftest.py
tests/api/: test_competitors.py
tests/collectors/: test_base.py
tests/services/: test_analyzer.py
